--- a/MasterPage.master
+++ b/MasterPage.master
@@ -15,6 +15,7 @@
     <link href="Style/app.min.css" rel="stylesheet" />
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
+    <meta name="description" content="The description of my page" />
 </head>
 <body ng-app="myApp">
     <form id="form1" runat="server">
